--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-autoprefixer": "0.0.10",
     "gulp-babel": "^5.1.0",
     "gulp-cached": "^1.0.1",
+    "gulp-clean": "^0.3.2",
     "gulp-coffee": "^2.1.1",
     "gulp-concat": "^2.4.0",
     "gulp-connect": "^2.0.6",
